--- a/css/select2.css
+++ b/css/select2.css
@@ -4,14 +4,21 @@
 
 .select2-container--default
 .select2-selection--multiple
-.select2-selection__choice.status-unpublished {
+.select2-selection__choice.status-unpublished,
+.select2-results__option.status-unpublished span {
     background-color: #e62600;
 }
 
 .select2-container--default
 .select2-selection--multiple
-.select2-selection__choice.status-published {
+.select2-selection__choice.status-published,
+.select2-results__option.status-published span {
     background-color: #77b259;
+}
+
+.select2-results__option span {
+    border: 1px solid #aaa;
+    border-radius: 4px;
 }
 
 .select2-container--default
